src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-omT-ofT-dhU-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BN\nconfig:\nwindow-rule {\n    open-fullscreen false\n    open-maximized true\n    open-floating true\n    default-window-height {  }\n}"
expression: snapshot
snapshot_kind: text
---
initial configure:
size: 0 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
